@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-11-17" />
+<meta name="date" content="2010-11-22" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-11-17</td></tr>
+<td>2010-11-22</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -1732,6 +1732,13 @@ will switch to that file and go to the corresponding line number. The
 current word is either the word nearest the edit cursor,
 or the word underneath the popup menu click position when the popup
 menu is used.</p>
+<div class="note">
+<p class="first admonition-title">Note</p>
+<p class="last">If the current word's tag is on the current line, Geany will try
+to look for a tag declaration instead, as this is more useful.
+Likewise 'Go to tag declaration' will search for a tag definition
+in this case also.</p>
+</div>
 </div>
 <div class="section">
 <h3><a class="toc-backref" href="#id73" id="go-to-tag-declaration" name="go-to-tag-declaration">Go to tag declaration</a></h3>
@@ -6359,7 +6366,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-11-22 12:42 UTC.
+Generated on: 2010-11-23 13:12 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
